--- a/index.html
+++ b/index.html
@@ -4,8 +4,205 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Viktar Rudzenia CV</title>
   </head>
 
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <div class="header__logo">Viktar Rudzenia</div>
+        <ul class="header__navigation">
+          <li><a href="#contacts">Contact info</a></li>
+          <li><a href="#">Skills</a></li>
+          <li><a href="#">Code example</a></li>
+          <li><a href="#">Experience</a></li>
+          <li><a href="#">Education</a></li>
+          <li><a href="#">English</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="contacts" id="contacts">
+        <div class="contacts__info">
+          <p>
+            E-mail: ViktarRudzenia@gmail.com
+          </p>
+          <p>Phone number: +375(33)390-13-57</p>
+          <p>LinkedIn account: https://www.linkedin.com/in/viktarrudzenia/</p>
+          <p>Telegram: https://t.me/ViktarRudzenia</p>
+        </div>
+        <div class="contacts__photo">
+          <img src="./img/myphoto.jpg" alt="Viktar Rudzenia photo" />
+        </div>
+      </section>
+      <section class="skills">
+        <p>HTML5, CSS3/SASS, Javascript(ES6+), Git, Node.js, React.js, Redux</p>
+        <p>
+          My profile with completed courses:
+          https://www.codecademy.com/profiles/ViktarRudzenia. Courses that I
+          have completed:
+          <a href="https://www.codecademy.com/learn/learn-html"
+            >Introduction to HTML</a
+          >
+          <a href="https://www.codecademy.com/learn/learn-css">Learn CSS</a>
+          <a href="https://www.codecademy.com/learn/learn-git">Learn Git</a>
+          <a href="https://www.codecademy.com/learn/introduction-to-javascript"
+            >Introduction to JavaScript</a
+          >
+          <a href="https://www.codecademy.com/learn/asynchronous-javascript"
+            >Asynchronous JavaScript</a
+          >
+          <a href="https://www.codecademy.com/learn/build-interactive-websites"
+            >Building Interactive JavaScript Websites</a
+          >
+          <a href="https://www.codecademy.com/learn/learn-responsive-design"
+            >Learn Responsive Design</a
+          >
+          <a href="https://www.codecademy.com/learn/learn-navigation-design"
+            >Learn Navigation Design</a
+          >
+          <a href="https://www.codecademy.com/learn/deploy-a-website"
+            >Deploy a Website</a
+          >
+        </p>
+        <p>
+          My profile in
+          [codewars.com](https://www.codewars.com/users/Viktarrudzenia) :
+          [![CodeWars](https://www.codewars.com/users/Viktarrudzenia/badges/large)](https://www.codewars.com/users/Viktarrudzenia)
+          My completed codewars challenges you can find
+          [here](https://github.com/Viktarrudzenia/codewars "Completed CodeWars
+          Challenges")
+        </p>
+      </section>
+      <section class="code_example">
+        <p>
+          Last favorite task which I complete in
+          [codewars.com](https://www.codewars.com/ "codewars.com"): [Alphabet
+          war - Wo lo loooooo priests join the
+          war](https://www.codewars.com/kata/59473c0a952ac9b463000064 "Alphabet
+          war - Wo lo loooooo priests join the war")
+        </p>
+        <p>
+          <script>
+            function alphabetWar(fight) {
+              // make array
+              fight = fight.split("");
+
+              //define objects with letters which fights
+              let leftSideLetters = {
+                w: [4, "m"],
+                p: [3, "q"],
+                b: [2, "d"],
+                s: [1, "z"]
+              };
+              let rightSideLetters = {
+                m: [4, "w"],
+                q: [3, "p"],
+                d: [2, "b"],
+                z: [1, "s"]
+              };
+              // define sums of right and left sides
+              let sumOfLeft = 0;
+              let sumOfRight = 0;
+
+              // Searching j and t priests and do magic things :) (replace i+1 and i - 1)
+              for (let i = 0; i < fight.length; i++) {
+                // "Magic" for leftSide
+                if (fight[i] == "t") {
+                  if (
+                    rightSideLetters[fight[i - 1]] != undefined &&
+                    fight[i - 2] != "j"
+                  ) {
+                    fight[i - 1] = rightSideLetters[fight[i - 1]][1];
+                  }
+                  if (
+                    rightSideLetters[fight[i + 1]] != undefined &&
+                    fight[i + 2] != "j"
+                  ) {
+                    fight[i + 1] = rightSideLetters[fight[i + 1]][1];
+                  }
+                }
+                // "Magic" for rightSide
+                if (fight[i] == "j") {
+                  if (
+                    leftSideLetters[fight[i - 1]] != undefined &&
+                    fight[i - 2] != "t"
+                  ) {
+                    fight[i - 1] = leftSideLetters[fight[i - 1]][1];
+                  }
+                  if (
+                    leftSideLetters[fight[i + 1]] != undefined &&
+                    fight[i + 2] != "t"
+                  ) {
+                    fight[i + 1] = leftSideLetters[fight[i + 1]][1];
+                  }
+                }
+              }
+
+              // Calculate who wins
+              for (let i = 0; i < fight.length; i++) {
+                if (rightSideLetters[fight[i]] != undefined) {
+                  sumOfRight += rightSideLetters[fight[i]][0];
+                }
+                if (leftSideLetters[fight[i]] != undefined) {
+                  sumOfLeft += leftSideLetters[fight[i]][0];
+                }
+              }
+
+              // decide who win this epic battle
+              if (sumOfLeft > sumOfRight) {
+                return "Left side wins!";
+              } else if (sumOfRight > sumOfLeft) {
+                return "Right side wins!";
+              } else {
+                return "Let's fight again!";
+              }
+            }
+          </script>
+        </p>
+      </section>
+      <section class="work_experience">
+        ### Main Data Processing Centre under the state association "Belarusian
+        Railway" 1. **Position**: Software Engineer (31.01.2016 - 31.07.2016).
+        2. **Position**: Systems Engineer (31.07.2016 - 31.01.2019). 3.
+        **Position**: Systems Engineer 2 category (31.01.2019 - till now).
+      </section>
+      <section class="education">
+        ### Belarusian State University of Informatics and Radioelectronics
+        <a href="https://www.bsuir.by/">bsuir.by</a>
+        <hr />
+        1. Bachelour degree - **Faculty:** Faculty of Computer-Aided Design -
+        **Department**: Information and Computer-Aided Systems Design -
+        **Education form:** Full-time - **Degree:** bachelor - **Graduation
+        year:** 2016
+        <hr />
+        2. Master degree - **Faculty:** Faculty of Computer-Aided Design -
+        **Department:** Information and Computer-Aided Systems Design -
+        **Education form:** Distant - **Degree:** master - **Graduation year:**
+        2019
+      </section>
+      <section class="english">
+        Started learning English from the 1st grade at school
+        <hr />
+        From the 5th grade I was in the advanced English group at school
+        <hr />
+        During my study at university (**bachelor's degree**) I had a 2-year
+        English course
+        <hr />
+        During my study at university (**master's degree**) I had a 1-year
+        English course at the end of which I successfully passed the candidate
+        exam
+        <hr />
+        Now I can easily read any documentation, watch videos and briefly talk
+        in English with somebody. But without any practice at my current job my
+        English level: **B1 (Intermediate)**
+        <hr />
+        Daily I read at least 1 article at [medium.com](https://medium.com/
+        "medium.com") related to programming (HTML, CSS, JS, React, Redux)
+      </section>
+    </main>
+
+    <footer>Footer</footer>
+  </body>
 </html>
