feat: add skills section

--- a/index.html
+++ b/index.html
@@ -45,49 +45,75 @@
           </div>
         </section>
         <section class="skills" id="skills">
-          <p>
-            HTML5, CSS3/SASS, Javascript(ES6+), Git, Node.js, React.js, Redux
-          </p>
-          <p>
-            My profile with completed courses:
-            https://www.codecademy.com/profiles/ViktarRudzenia. Courses that I
-            have completed:
-            <a href="https://www.codecademy.com/learn/learn-html"
-              >Introduction to HTML</a
-            >
-            <a href="https://www.codecademy.com/learn/learn-css">Learn CSS</a>
-            <a href="https://www.codecademy.com/learn/learn-git">Learn Git</a>
+          <div class="skills__title">skills</div>
+          <div class="skills__abilities">
+            <div>HTML5</div>
+            <div>CSS3/SASS</div>
+            <div>Javascript(ES6+)</div>
+            <div>Git</div>
+            <div>Node.js</div>
+            <div>React.js</div>
+            <div>Redux</div>
+          </div>
+          <div class="skills__codecademy">
+            <div class="skills_codecademy-profile">
+              My codecademy profile with completed courses:
+              <a href="https://www.codecademy.com/profiles/ViktarRudzenia"
+                ><img
+                  alt="Codecademy logo"
+                  class="skills__codecademy-logo"
+                  src="./img/codecademy.svg"
+              /></a>
+
+              . Courses that I have completed:
+            </div>
+            <div class="skills__codecademy-list">
+              <a href="https://www.codecademy.com/learn/learn-html"
+                >Introduction to HTML</a
+              >
+              <a href="https://www.codecademy.com/learn/learn-css">Learn CSS</a>
+              <a href="https://www.codecademy.com/learn/learn-git">Learn Git</a>
+              <a
+                href="https://www.codecademy.com/learn/introduction-to-javascript"
+                >Introduction to JavaScript</a
+              >
+              <a href="https://www.codecademy.com/learn/asynchronous-javascript"
+                >Asynchronous JavaScript</a
+              >
+              <a
+                href="https://www.codecademy.com/learn/build-interactive-websites"
+                >Building Interactive JavaScript Websites</a
+              >
+              <a href="https://www.codecademy.com/learn/learn-responsive-design"
+                >Learn Responsive Design</a
+              >
+              <a href="https://www.codecademy.com/learn/learn-navigation-design"
+                >Learn Navigation Design</a
+              >
+              <a href="https://www.codecademy.com/learn/deploy-a-website"
+                >Deploy a Website</a
+              >
+            </div>
+          </div>
+          <div class="skills__codewarsprofile">
+            My profile in codewars.com:
+            <a href="https://www.codewars.com/users/Viktarrudzenia"
+              ><img
+                src="https://www.codewars.com/users/Viktarrudzenia/badges/large"
+                alt="codewars badge large"
+            /></a>
+          </div>
+          <div class="skills__codewarsgithub">
+            My completed codewars challenges you can find at my github account:
             <a
-              href="https://www.codecademy.com/learn/introduction-to-javascript"
-              >Introduction to JavaScript</a
+              href="https://github.com/Viktarrudzenia/codewars"
+              title="Completed
+            CodeWars Challenges"
+              >Completed CodeWars Challenges</a
             >
-            <a href="https://www.codecademy.com/learn/asynchronous-javascript"
-              >Asynchronous JavaScript</a
-            >
-            <a
-              href="https://www.codecademy.com/learn/build-interactive-websites"
-              >Building Interactive JavaScript Websites</a
-            >
-            <a href="https://www.codecademy.com/learn/learn-responsive-design"
-              >Learn Responsive Design</a
-            >
-            <a href="https://www.codecademy.com/learn/learn-navigation-design"
-              >Learn Navigation Design</a
-            >
-            <a href="https://www.codecademy.com/learn/deploy-a-website"
-              >Deploy a Website</a
-            >
-          </p>
-          <p>
-            My profile in
-            [codewars.com](https://www.codewars.com/users/Viktarrudzenia) :
-            [![CodeWars](https://www.codewars.com/users/Viktarrudzenia/badges/large)](https://www.codewars.com/users/Viktarrudzenia)
-            My completed codewars challenges you can find
-            [here](https://github.com/Viktarrudzenia/codewars "Completed
-            CodeWars Challenges")
-          </p>
+          </div>
         </section>
-        <section class="code_example">
+        <!-- <section class="code_example">
           <p>
             Last favorite task which I complete in
             [codewars.com](https://www.codewars.com/ "codewars.com"): [Alphabet
@@ -213,10 +239,10 @@
           <hr />
           Daily I read at least 1 article at [medium.com](https://medium.com/
           "medium.com") related to programming (HTML, CSS, JS, React, Redux)
-        </section>
+        </section> -->
       </main>
 
-      <footer>Footer</footer>
+      <footer class="footer">Made by Viktar Rudzenia</footer>
     </div>
   </body>
 </html>
