refactor: normalize all styles

--- a/index.html
+++ b/index.html
@@ -56,50 +56,63 @@
             <div>Redux</div>
           </div>
           <div class="skills__codecademy">
-            <div class="skills_codecademy-profile">
-              My codecademy profile with completed courses:
-              <a href="https://www.codecademy.com/profiles/ViktarRudzenia"
-                ><img
-                  alt="Codecademy logo"
-                  class="skills__codecademy-logo"
-                  src="./img/codecademy.svg"
-              /></a>
-
-              . Courses that I have completed:
-            </div>
             <div class="skills__codecademy-list">
-              <a href="https://www.codecademy.com/learn/learn-html"
-                >Introduction to HTML</a
-              >
-              <a href="https://www.codecademy.com/learn/learn-css">Learn CSS</a>
-              <a href="https://www.codecademy.com/learn/learn-git">Learn Git</a>
-              <a
-                href="https://www.codecademy.com/learn/introduction-to-javascript"
-                >Introduction to JavaScript</a
-              >
-              <a href="https://www.codecademy.com/learn/asynchronous-javascript"
-                >Asynchronous JavaScript</a
-              >
-              <a
-                href="https://www.codecademy.com/learn/build-interactive-websites"
-                >Building Interactive JavaScript Websites</a
-              >
-              <a href="https://www.codecademy.com/learn/learn-responsive-design"
-                >Learn Responsive Design</a
-              >
-              <a href="https://www.codecademy.com/learn/learn-navigation-design"
-                >Learn Navigation Design</a
-              >
-              <a href="https://www.codecademy.com/learn/deploy-a-website"
-                >Deploy a Website</a
-              >
+              <div class="skills__codecademy-list-a">
+                <a href="https://www.codecademy.com/learn/learn-html"
+                  >Introduction to HTML</a
+                >
+                <a href="https://www.codecademy.com/learn/learn-css"
+                  >Learn CSS</a
+                >
+                <a href="https://www.codecademy.com/learn/learn-git"
+                  >Learn Git</a
+                >
+              </div>
+              <div class="skills__codecademy-list-b">
+                <a
+                  href="https://www.codecademy.com/learn/introduction-to-javascript"
+                  >Introduction to JavaScript</a
+                >
+                <a
+                  href="https://www.codecademy.com/learn/asynchronous-javascript"
+                  >Asynchronous JavaScript</a
+                >
+                <a
+                  href="https://www.codecademy.com/learn/build-interactive-websites"
+                  >Building Interactive JavaScript Websites</a
+                >
+              </div>
+              <div class="skills__codecademy-list-b">
+                <a
+                  href="https://www.codecademy.com/learn/learn-responsive-design"
+                  >Learn Responsive Design</a
+                >
+                <a
+                  href="https://www.codecademy.com/learn/learn-navigation-design"
+                  >Learn Navigation Design</a
+                >
+                <a href="https://www.codecademy.com/learn/deploy-a-website"
+                  >Deploy a Website</a
+                >
+              </div>
             </div>
+          </div>
+          <div class="skills_codecademy-profile">
+            My codecademy profile with completed courses:
+            <a href="https://www.codecademy.com/profiles/ViktarRudzenia"
+              ><img
+                alt="Codecademy logo"
+                class="skills__codecademy-logo"
+                src="./img/codecademy.svg"
+            /></a>
+            Completed courses:
           </div>
           <div class="skills__codewarsprofile">
             My profile in codewars.com:
             <a href="https://www.codewars.com/users/Viktarrudzenia"
               ><img
                 src="https://www.codewars.com/users/Viktarrudzenia/badges/large"
+                class="skills__codewarsprofile-logo"
                 alt="codewars badge large"
             /></a>
           </div>
