feat: add all sections

--- a/index.html
+++ b/index.html
@@ -1,261 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./style.css" />
-    <title>Viktar Rudzenia CV</title>
-  </head>
 
-  <body>
-    <div class="wrapper">
-      <header>
-        <nav class="header">
-          <div class="header__logo">Viktar Rudzenia Logo</div>
-          <ul class="header__navigation">
-            <li><a href="#contacts">Contacts</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#">Code</a></li>
-            <li><a href="#">Experience</a></li>
-            <li><a href="#">Education</a></li>
-            <li><a href="#">English</a></li>
-          </ul>
-        </nav>
-      </header>
-      <main>
-        <section class="contacts" id="contacts">
-          <div class="contacts__info">
-            <div class="contacts__info__name">
-              Hello everyone! My name is Viktar Rudzenia
-            </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./style.css" />
+  <title>Viktar Rudzenia CV</title>
+</head>
 
-            <div class="contacts__info__data">
-              <div>My contact info:</div>
-              <div>E-mail: ViktarRudzenia@gmail.com</div>
-              <div>Phone number: +375(33)390-13-57</div>
-              <div>
-                LinkedIn account: https://www.linkedin.com/in/viktarrudzenia/
-              </div>
-              <div>Telegram: https://t.me/ViktarRudzenia</div>
+<body>
+  <div class="wrapper">
+    <header>
+      <nav class="header">
+        <div class="header__logo">Viktar Rudzenia Logo</div>
+        <ul class="header__navigation">
+          <li><a href="#contacts">Contacts</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#code_example">Code</a></li>
+          <li><a href="#work_experience">Experience</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#english">English</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="contacts" id="contacts">
+        <div class="contacts__info">
+          <div class="contacts__info__name">
+            Hello everyone! My name is Viktar Rudzenia
+          </div>
+
+          <div class="contacts__info__data">
+            <div>My contact info:</div>
+            <div>E-mail: ViktarRudzenia@gmail.com</div>
+            <div>Phone number: +375(33)390-13-57</div>
+            <div>
+              LinkedIn account: https://www.linkedin.com/in/viktarrudzenia/
+            </div>
+            <div>Telegram: https://t.me/ViktarRudzenia</div>
+          </div>
+        </div>
+        <div class="contacts__photo">
+          <img src="./img/myphoto.jpg" alt="Viktar Rudzenia photo" />
+        </div>
+      </section>
+
+      <section class="skills" id="skills">
+        <div class="skills__title">skills</div>
+        <div class="skills__abilities">
+          <div>HTML5</div>
+          <div>CSS3/SASS</div>
+          <div>Javascript (ES6+)</div>
+          <div>Git</div>
+          <div>Node.js</div>
+          <div>React.js</div>
+          <div>Redux</div>
+        </div>
+        <div class="skills__codecademy">
+          <div class="skills__codecademy-list">
+            <div class="skills__codecademy-list-a">
+              <a href="https://www.codecademy.com/learn/learn-html">Introduction to HTML</a>
+              <a href="https://www.codecademy.com/learn/learn-css">Learn CSS</a>
+              <a href="https://www.codecademy.com/learn/learn-git">Learn Git</a>
+            </div>
+            <div class="skills__codecademy-list-b">
+              <a href="https://www.codecademy.com/learn/introduction-to-javascript">Introduction to JavaScript</a>
+              <a href="https://www.codecademy.com/learn/asynchronous-javascript">Asynchronous JavaScript</a>
+              <a href="https://www.codecademy.com/learn/build-interactive-websites">Building Interactive JavaScript
+                Websites</a>
+            </div>
+            <div class="skills__codecademy-list-b">
+              <a href="https://www.codecademy.com/learn/learn-responsive-design">Learn Responsive Design</a>
+              <a href="https://www.codecademy.com/learn/learn-navigation-design">Learn Navigation Design</a>
+              <a href="https://www.codecademy.com/learn/deploy-a-website">Deploy a Website</a>
             </div>
           </div>
-          <div class="contacts__photo">
-            <img src="./img/myphoto.jpg" alt="Viktar Rudzenia photo" />
+        </div>
+        <div class="skills_codecademy-profile">
+          My codecademy profile with completed courses:
+          <a href="https://www.codecademy.com/profiles/ViktarRudzenia"><img alt="Codecademy logo"
+              class="skills__codecademy-logo" src="./img/codecademy.svg" /></a>
+          Completed courses:
+        </div>
+        <div class="skills__codewarsprofile">
+          My profile in codewars.com:
+          <a href="https://www.codewars.com/users/Viktarrudzenia"><img
+              src="https://www.codewars.com/users/Viktarrudzenia/badges/large" class="skills__codewarsprofile-logo"
+              alt="codewars badge large" /></a>
+        </div>
+        <div class="skills__codewarsgithub">
+          My completed codewars challenges you can find at my github account:
+          <a href="https://github.com/Viktarrudzenia/codewars" title="Completed
+            CodeWars Challenges">Completed CodeWars Challenges</a>
+        </div>
+      </section>
+      <section class="code_example">
+        <div class="title" id="code_example">
+          code example
+        </div>
+        <div class="code_example__solution">
+          <div>
+            Last favorite task which I complete in codewars.com:
+            <a href="https://www.codewars.com/kata/59473c0a952ac9b463000064">Alphabet
+              war - Wo lo loooooo priests join the
+              war</a>
           </div>
-        </section>
-        <section class="skills" id="skills">
-          <div class="skills__title">skills</div>
-          <div class="skills__abilities">
-            <div>HTML5</div>
-            <div>CSS3/SASS</div>
-            <div>Javascript(ES6+)</div>
-            <div>Git</div>
-            <div>Node.js</div>
-            <div>React.js</div>
-            <div>Redux</div>
-          </div>
-          <div class="skills__codecademy">
-            <div class="skills__codecademy-list">
-              <div class="skills__codecademy-list-a">
-                <a href="https://www.codecademy.com/learn/learn-html"
-                  >Introduction to HTML</a
-                >
-                <a href="https://www.codecademy.com/learn/learn-css"
-                  >Learn CSS</a
-                >
-                <a href="https://www.codecademy.com/learn/learn-git"
-                  >Learn Git</a
-                >
-              </div>
-              <div class="skills__codecademy-list-b">
-                <a
-                  href="https://www.codecademy.com/learn/introduction-to-javascript"
-                  >Introduction to JavaScript</a
-                >
-                <a
-                  href="https://www.codecademy.com/learn/asynchronous-javascript"
-                  >Asynchronous JavaScript</a
-                >
-                <a
-                  href="https://www.codecademy.com/learn/build-interactive-websites"
-                  >Building Interactive JavaScript Websites</a
-                >
-              </div>
-              <div class="skills__codecademy-list-b">
-                <a
-                  href="https://www.codecademy.com/learn/learn-responsive-design"
-                  >Learn Responsive Design</a
-                >
-                <a
-                  href="https://www.codecademy.com/learn/learn-navigation-design"
-                  >Learn Navigation Design</a
-                >
-                <a href="https://www.codecademy.com/learn/deploy-a-website"
-                  >Deploy a Website</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="skills_codecademy-profile">
-            My codecademy profile with completed courses:
-            <a href="https://www.codecademy.com/profiles/ViktarRudzenia"
-              ><img
-                alt="Codecademy logo"
-                class="skills__codecademy-logo"
-                src="./img/codecademy.svg"
-            /></a>
-            Completed courses:
-          </div>
-          <div class="skills__codewarsprofile">
-            My profile in codewars.com:
-            <a href="https://www.codewars.com/users/Viktarrudzenia"
-              ><img
-                src="https://www.codewars.com/users/Viktarrudzenia/badges/large"
-                class="skills__codewarsprofile-logo"
-                alt="codewars badge large"
-            /></a>
-          </div>
-          <div class="skills__codewarsgithub">
-            My completed codewars challenges you can find at my github account:
+          <div>
+            My solution you can find on my
             <a
-              href="https://github.com/Viktarrudzenia/codewars"
-              title="Completed
-            CodeWars Challenges"
-              >Completed CodeWars Challenges</a
-            >
+              href="https://github.com/Viktarrudzenia/codewars/blob/master/5%20kyu/Alphabet%20war%20-%20Wo%20lo%20loooooo%20priests%20join%20the%20war.js">github</a>
           </div>
-        </section>
-        <!-- <section class="code_example">
-          <p>
-            Last favorite task which I complete in
-            [codewars.com](https://www.codewars.com/ "codewars.com"): [Alphabet
-            war - Wo lo loooooo priests join the
-            war](https://www.codewars.com/kata/59473c0a952ac9b463000064
-            "Alphabet war - Wo lo loooooo priests join the war")
-          </p>
-          <p>
-            <script>
-              function alphabetWar(fight) {
-                // make array
-                fight = fight.split("");
+        </div>
+      </section>
 
-                //define objects with letters which fights
-                let leftSideLetters = {
-                  w: [4, "m"],
-                  p: [3, "q"],
-                  b: [2, "d"],
-                  s: [1, "z"]
-                };
-                let rightSideLetters = {
-                  m: [4, "w"],
-                  q: [3, "p"],
-                  d: [2, "b"],
-                  z: [1, "s"]
-                };
-                // define sums of right and left sides
-                let sumOfLeft = 0;
-                let sumOfRight = 0;
+      <section class="work_experience">
+        <div class="title" id="work_experience">work experience</div>
+        <div class="work_experience__data">
+          <h2> Main Data Processing Centre under the state association
+            "Belarusian Railway"</h2>
+          <div> 1. Position: Software Engineer (31.01.2016 -
+            31.07.2016).
+          </div>
+          <div>2. Position: Systems Engineer (31.07.2016 -
+            31.01.2019). </div>
+          <div>3. Position: Systems Engineer 2 category (31.01.2019
+            - till now).
+          </div>
+        </div>
+      </section>
+      <section class="education">
+        <div class="title" id="education">education</div>
+        <div class="education__data">
+          <div class="education__university">
+            <h2>Belarusian State University of Informatics and Radioelectronics</h2>
+          </div>
+          <div class="education__bachelour">
+            <div class="education__degree">
+              1. Bachelour degree
+            </div>
+            <div class="education__info">
+              <div>Faculty: Faculty of Computer-Aided Design</div>
+              <div>Department: Information and Computer-Aided Systems Design</div>
+              <div>Education form: Full-time</div>
+              <div>Degree: bachelor</div>
+              <div>Graduation year: 2016</div>
+            </div>
+          </div>
+          <div>
+            <div class="education__master">
+              <div class="education__degree">
+                2. Master degree
+              </div>
+              <div class="education__info">
+                <div>Faculty: Faculty of Computer-Aided Design</div>
+                <div>Department: Information and Computer-Aided Systems Design</div>
+                <div>Education form: Distant</div>
+                <div>Degree: master</div>
+                <div>Graduation year: 2019</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="english">
+        <div class="title" id="english">english</div>
+        <div class="english__data">
+          <ul>
+            <li>Started learning English from the 1st grade at school</li>
+            <li>From the 5th grade I was in the advanced English group at school</li>
+            <li>During my study at university (bachelor's degree) I had a 2-year
+              English course</li>
+            <li>During my study at university (master's degree) I had a 1-year
+              English course at the end of which I successfully passed the candidate
+              exam</li>
+            <li>Now I can easily read any documentation, watch videos and briefly talk
+              in English with somebody. But without any practice at my current job
+              my English level: B1 (Intermediate)</li>
+            <li>Daily I read at least 1 article at <a href="https://medium.com/">medium.com</a> related to programming
+              (HTML, CSS, JS, React, Redux)</li>
+        </div>
+      </section>
+    </main>
 
-                // Searching j and t priests and do magic things :) (replace i+1 and i - 1)
-                for (let i = 0; i < fight.length; i++) {
-                  // "Magic" for leftSide
-                  if (fight[i] == "t") {
-                    if (
-                      rightSideLetters[fight[i - 1]] != undefined &&
-                      fight[i - 2] != "j"
-                    ) {
-                      fight[i - 1] = rightSideLetters[fight[i - 1]][1];
-                    }
-                    if (
-                      rightSideLetters[fight[i + 1]] != undefined &&
-                      fight[i + 2] != "j"
-                    ) {
-                      fight[i + 1] = rightSideLetters[fight[i + 1]][1];
-                    }
-                  }
-                  // "Magic" for rightSide
-                  if (fight[i] == "j") {
-                    if (
-                      leftSideLetters[fight[i - 1]] != undefined &&
-                      fight[i - 2] != "t"
-                    ) {
-                      fight[i - 1] = leftSideLetters[fight[i - 1]][1];
-                    }
-                    if (
-                      leftSideLetters[fight[i + 1]] != undefined &&
-                      fight[i + 2] != "t"
-                    ) {
-                      fight[i + 1] = leftSideLetters[fight[i + 1]][1];
-                    }
-                  }
-                }
+    <footer class="footer">Made by Viktar Rudzenia</footer>
+    </di>
+</body>
 
-                // Calculate who wins
-                for (let i = 0; i < fight.length; i++) {
-                  if (rightSideLetters[fight[i]] != undefined) {
-                    sumOfRight += rightSideLetters[fight[i]][0];
-                  }
-                  if (leftSideLetters[fight[i]] != undefined) {
-                    sumOfLeft += leftSideLetters[fight[i]][0];
-                  }
-                }
-
-                // decide who win this epic battle
-                if (sumOfLeft > sumOfRight) {
-                  return "Left side wins!";
-                } else if (sumOfRight > sumOfLeft) {
-                  return "Right side wins!";
-                } else {
-                  return "Let's fight again!";
-                }
-              }
-            </script>
-          </p>
-        </section>
-        <section class="work_experience">
-          ### Main Data Processing Centre under the state association
-          "Belarusian Railway" 1. **Position**: Software Engineer (31.01.2016 -
-          31.07.2016). 2. **Position**: Systems Engineer (31.07.2016 -
-          31.01.2019). 3. **Position**: Systems Engineer 2 category (31.01.2019
-          - till now).
-        </section>
-        <section class="education">
-          ### Belarusian State University of Informatics and Radioelectronics
-          <a href="https://www.bsuir.by/">bsuir.by</a>
-          <hr />
-          1. Bachelour degree - **Faculty:** Faculty of Computer-Aided Design -
-          **Department**: Information and Computer-Aided Systems Design -
-          **Education form:** Full-time - **Degree:** bachelor - **Graduation
-          year:** 2016
-          <hr />
-          2. Master degree - **Faculty:** Faculty of Computer-Aided Design -
-          **Department:** Information and Computer-Aided Systems Design -
-          **Education form:** Distant - **Degree:** master - **Graduation
-          year:** 2019
-        </section>
-        <section class="english">
-          Started learning English from the 1st grade at school
-          <hr />
-          From the 5th grade I was in the advanced English group at school
-          <hr />
-          During my study at university (**bachelor's degree**) I had a 2-year
-          English course
-          <hr />
-          During my study at university (**master's degree**) I had a 1-year
-          English course at the end of which I successfully passed the candidate
-          exam
-          <hr />
-          Now I can easily read any documentation, watch videos and briefly talk
-          in English with somebody. But without any practice at my current job
-          my English level: **B1 (Intermediate)**
-          <hr />
-          Daily I read at least 1 article at [medium.com](https://medium.com/
-          "medium.com") related to programming (HTML, CSS, JS, React, Redux)
-        </section> -->
-      </main>
-
-      <footer class="footer">Made by Viktar Rudzenia</footer>
-    </div>
-  </body>
 </html>
