feat: add styles to links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css" />
   <title>Viktar Rudzenia CV</title>
 </head>
@@ -78,10 +79,10 @@
           </div>
         </div>
         <div class="skills_codecademy-profile">
-          My codecademy profile with completed courses:
+          My codecademy profile with completed courses
           <a href="https://www.codecademy.com/profiles/ViktarRudzenia"><img alt="Codecademy logo"
               class="skills__codecademy-logo" src="./img/codecademy.svg" /></a>
-          Completed courses:
+          :
         </div>
         <div class="skills__codewarsprofile">
           My profile in codewars.com:
@@ -107,7 +108,7 @@
               war</a>
           </div>
           <div>
-            My solution you can find on my
+            My solution you can find at my
             <a
               href="https://github.com/Viktarrudzenia/codewars/blob/master/5%20kyu/Alphabet%20war%20-%20Wo%20lo%20loooooo%20priests%20join%20the%20war.js">github</a>
           </div>
@@ -135,29 +136,31 @@
           <div class="education__university">
             <h2>Belarusian State University of Informatics and Radioelectronics</h2>
           </div>
-          <div class="education__bachelour">
-            <div class="education__degree">
-              1. Bachelour degree
-            </div>
-            <div class="education__info">
-              <div>Faculty: Faculty of Computer-Aided Design</div>
-              <div>Department: Information and Computer-Aided Systems Design</div>
-              <div>Education form: Full-time</div>
-              <div>Degree: bachelor</div>
-              <div>Graduation year: 2016</div>
-            </div>
-          </div>
-          <div>
-            <div class="education__master">
+          <div class="education__grade">
+            <div class="education__bachelour">
               <div class="education__degree">
-                2. Master degree
+                1. Bachelour degree
               </div>
               <div class="education__info">
-                <div>Faculty: Faculty of Computer-Aided Design</div>
-                <div>Department: Information and Computer-Aided Systems Design</div>
-                <div>Education form: Distant</div>
-                <div>Degree: master</div>
-                <div>Graduation year: 2019</div>
+                <div><strong>Faculty:</strong> Faculty of Computer-Aided Design</div>
+                <div><strong>Department:</strong> Information and Computer-Aided Systems Design</div>
+                <div><strong>Education form:</strong> Full-time</div>
+                <div><strong>Degree:</strong> bachelor</div>
+                <div><strong>Graduation year:</strong> 2016</div>
+              </div>
+            </div>
+            <div>
+              <div class="education__master">
+                <div class="education__degree">
+                  2. Master degree
+                </div>
+                <div class="education__info">
+                  <div><strong>Faculty:</strong> Faculty of Computer-Aided Design</div>
+                  <div><strong>Department:</strong> Information and Computer-Aided Systems Design</div>
+                  <div><strong>Education form:</strong> Distant</div>
+                  <div><strong>Degree:</strong> master</div>
+                  <div><strong>Graduation year:</strong> 2019</div>
+                </div>
               </div>
             </div>
           </div>
